--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,13 @@
   line-height: 1.5;
   font-weight: 400;
   scroll-behavior: smooth;
-
+  overflow-x: hidden; /* Hide horizontal scrollbar */
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
 }
+
 
